Prevent crash when no account information is provided in QIF record

BUG: 506667
FIXED-IN: 5.2.1
(cherry picked from commit e3c942be03e35d74025e9bdd175f39580b0e38f1)